--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-	"name": "guac-bulk-user-import",
+	"name": "guacbui",
 	"version": "1.0.0",
-	"description": "",
+	"description": "A bulk user/group importer for Guacamole instances",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"parse": "node ./src/parser.js",
+		"start": "npm run parse"
 	},
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
 		"node-fetch": "^2.6.0",
-		"puppeteer": "^2.0.0"
+		"puppeteer": "^2.0.0",
+		"simple-excel-to-json": "^2.2.1"
 	}
 }
